--- a/jueguito.html
+++ b/jueguito.html
@@ -11,10 +11,17 @@
 
   <body>
 
-    <h1 class="d-grid gap-2 col-4 mx-auto mt-5">El Numerito Magico!</h1>
+    <h1 class="d-grid col-6 mx-auto mt-5">Juego del Numero Magico</h1>
 
-    <div class="d-grid gap-2 col-6 mx-auto mt-5">
-        <a class="btn btn-outline-info" href="jueguito.html"> Comenzar el juego </a>
+    <div class="vh-100 d-flex justify-content-center align-items-center">
+        <form class="row g-3">
+            <div class="col-auto">
+              <input type="text" class="form-control" id="escribirNum"  placeholder="Escriba un numero">
+            </div>
+            <div class="col-auto">
+              <button id="enviarNum" type="submit" class="btn btn-primary mb-3">Adivinar</button>
+            </div>
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
