--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="app.js"> </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
 
     <title>Juego Magico</title>
   </head>
 
   <body>
-
-    <h1 class="d-grid gap-2 col-4 mx-auto mt-5">El Numerito Magico!</h1>
-
-    <div class="d-grid gap-2 col-6 mx-auto mt-5">
-        <a class="btn btn-outline-info" href="jueguito.html"> Comenzar el juego </a>
+    <div class="vh-100 d-flex justify-content-center align-content-center flex-column">
+      <h1 class="text-center">El Numerito Magico!</h1>
+      <div class=" d-flex justify-content-center align-items-center m-4">
+          <a class="btn btn-outline-info" href="jueguito.html"> Comenzar el juego </a>
+      </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 
