--- a/jueguito.html
+++ b/jueguito.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="app.js"> </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
 
     <title>Juego Magico</title>
   </head>
 
   <body>
-
-    <h1 class="d-grid col-6 mx-auto mt-5">Juego del Numero Magico</h1>
-
-    <div class="vh-100 d-flex justify-content-center align-items-center">
-        <form class="row g-3">
-            <div class="col-auto">
-              <input type="text" class="form-control" id="escribirNum"  placeholder="Escriba un numero">
-            </div>
-            <div class="col-auto">
-              <button id="enviarNum" type="submit" class="btn btn-primary mb-3">Adivinar</button>
-            </div>
-        </form>
+    <div class="vh-100 d-flex justify-content-center align-content-center flex-column">
+        <h1 class="text-center">Juego del Numero Magico</h1>
+        <div class=" d-flex justify-content-center align-items-center m-4">
+            <form class="row g-3">
+                <div class="col-auto">
+                  <input type="text" class="form-control" id="escribirNum"      placeholder="Escriba un numero">
+                </div>
+                <div class="col-auto">
+                  <button id="enviarNum" type="submit" class="btn btn-outline-info  mb-3">Adivinar</button>
+                </div>
+            </form>
+        </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 
